--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -13,58 +13,86 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
-
-  <body>
-<header>
- <nav>
-  <a href="#">Services </a>
-  <a href="#">Product </a>
-  <a href="#">Vision </a>
-  <a href="#">Features </a>
-  <a href="#">About </a>
-  <a href="#">Contact </a>
-
- </nav>
+<body>
+  <header>
+ <nav class="navigation">
+  <a href="#">Services</a>
+  <a href="#">Product</a>
+  <a href="#">Vision</a>
+  <a href="#">Features</a>
+  <a href="#">About</a>
+  <a href="#">Contact</a>
+  
+  </nav>
+<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
  
-   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </header>
+  
 
-</header>
+<section class="top-section">
+  <h1>
+   Innovation<br>
+   On<br>
+   Demand
+  </h1>
+
+</section>
+
+  <img class="top-img"src="img/header-img.png" alt="Image of a code snippet.">
+  <h4 class="button">Get Started</h4>
+
+
+
+
+  <hr class="line">
+
 
   
-  Innovation
-  On
-  Demand
+<section class="mid-section">
+  
+  <h4>Features</h4>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</section>
+<section class="mid-section1">
+  <h4>About</h4>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 
-  Get Started
-
-  <img src="img/header-img.png" alt="Image of a code snippet.">
-
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</section>
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+<div>
+<section class="bottom-section"> 
+  <h4>Services</h4>
+   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</section>
+
+<section class="bottom-section1">
+  <h4>Product</h4>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</section>
   
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<section class="bottom-section2">
+<h4>Vision</h4>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>  </section>
+</section>
+<hr class="line">
+</div>
 
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<section class="footer">
 
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
+  <h2>Contact</h2>
+  <p>123 Way 456 Street<br>
+  Somewhere, USA<br>
+  1 (888) 888-8888<br>
+  sales@greatidea.io </p>
 
-  Copyright Great Idea! 2018
+</section>
+ 
+  <h6>Copyright Great Idea! 2018</h6>
+  
   
   </body>
 </html>
